   - Added support for Gobliins2.
   - Added support for Simon the Sorcerer's Puzzle Pack

 General:
   - Better compression for DXA movies.
   - Added Dialog which allows the user to select the GUI theme on runtime.

 Broken Sword 1:
   - Added support for DXA cutscenes.
   - Added support for Macintosh version.

 Broken Sword 2:
   - Added support for DXA cutscenes.

 Cine:
   - Improved support for international versions.

 SCUMM:
   - Fixed various actor walking issues.

 Simon:
   - Renamed Simon engine to AGOS.

 WinCE Port:
   - Now using a GCC toolchain for building.

0.9.1 (2006-10-29)
 New Ports:
   - Added Nintendo DS port.
   - Added GP2X port.
   - Added GP32 port.

 General:
   - Fixed potential garbage and/or crash in debug console.
   - Removed restriction on 27 games per game id when added via launcher.

 SCUMM:
   - Improved support for international versions of HE games.
   - Fixed rare actor drawing glitches.
   - Fixed path finding during smart star challendge in Big Thinkers 1st Grade.
   - Fixed graphical glitches in stomach location of Pajama Sam 3.
   - Fixed graphical glitches in HE80 version of Putt-Putt Travels Through
     Time.
   - Fixed FM-TOWNS version of Indy3 failing on Amiga port.
   - Fixed crash in MM NES when clicking on top screen area
   - Now it is possible to turn on or off subtitles during SMUSH movies

 Simon:
   - Improved support for international versions of the Feeble Files.
   - Fixed undefined behaviour when loading music.
   - Fixed crash when displaying some subtitles in the Feeble Files.
   - Fixed crackling sound in Mac version of Feeble Files

 BASS:
   - Fixed character spacing in LINC terminals in floppy version v0.0303
   - Fixed a regression which caused incorrect adlib music emulation

 Broken Sword 1:
   - Fixed speech-related crashes.

 Broken Sword 2:
   - More robust handling of the optional startup.inf file.

 Kyrandia:
   - Scrolling in the Kyrandia intro is less CPU intensive, at the cost of