@@ -60,6 +60,7 @@ other games.
 \item Broken Sword 2:\\
   \begin{tabular}{ll}
     Ctrl-d                 & Starts the debugger\\
+    Ctrl-f                 & Toggle fast mode\\
     c                      & Displays the credits\\
     p                      & Pauses\\
   \end{tabular}
